# X-tetris

./: CMakeLists.txt  Doxyfile  NPC_tetris.c  NPC_tetris.h  README.md  input_control.c  input_control.h  main.c  main.h  tetris_components.c  tetris_components.h  tetris_operations.c  tetris_operations.h  tetris_print.c  tetris_print.h
